b66bc23a4b206a1745bc3b54580c7c7cedbfd0bfa2ee543e90a766e745a003f6/sass/style.scss
@import "compass";
@import "reset";
@import url(https://fonts.googleapis.com/css?family=Abel);

/*  色設定
 *  ベースカラー     : #fdfcf6 -> #10124a
 *  サブカラー       : #bea300 -> #4E9A3D
 *  アクセントカラー : #14c0c9 -> #E6C105
 *  通常文字色       : #4c4c4c -> #fdfcf6
 *  SKILLS文字/背景  : #fdfcf6
 *--------------------------------------------------*/

// ベースカラー
$baseColor: hsl(236, 30%, 31%);

// サブカラー
$subColor: hsl(240, 48%, 12%);

// アクセントカラー
$keyColor: hsl(50, 70%, 50%);

// 文字色
$baseFontColor: rgba(#fff, .85);

// font-size
$baseFontSize: .9rem; //14.4px

// font-family
$baseFontFamily : Verdana, "Hiragino Kaku Gothic ProN", "游ゴシック", YuGothic, "メイリオ", Meiryo, sans-serif;
$altFontFamily : 'Abel', sans-serif;

// breakpoints
$breakpoint-md: 768px;

@mixin mq-up() {
  @media screen and (min-width: #{$breakpoint-md}) {
    @content;
  }
}
@mixin mq-down() {
  @media screen and (max-width: #{$breakpoint-md - .02}) {
    @content;
  }
}

/*--------------------------------------------------
 *  base style
 *--------------------------------------------------*/
*,*:after,*:before {
  box-sizing: border-box;
}

body{
  color: $baseFontColor;
  font-size: $baseFontSize;
  font-family: $baseFontFamily;
  line-height: 1.8;
  letter-spacing: 0.05em;
  background-color: $baseColor;
}

a {
  color: $keyColor;
  text-decoration: none;

  &:hover, &:active, &:focus {
    text-decoration: none;
  }
}
.link {
  color: $keyColor;
  text-decoration: underline;

  &:hover {
    text-decoration: none;
  }
}

img {
  max-width: 100%;
}

/*--------------------------------------------------
*  common classes
*--------------------------------------------------*/

// container
.container {
  margin: 0 auto;
  padding: 0 15px;
  width: 100%;

  @include mq-up() {
    width: 90%;
    max-width: 1000px;
  }
}

// headings
.h1, .h2, .h3 {
  @extend .font-alt;
  line-height: 1.25;
  font-weight: normal;
}
.h1 {
  color: $keyColor;
  font-size: 2.5rem;

  .subtitle {
    font-size: 1.25rem;
    margin: 0;
    color: #fff;
  }
}
.h2 {
  color: #fff;
  font-size: 2rem;
  margin-bottom: 3rem;
  letter-spacing: 2px;
}
.h3 {
  &.h3-skills {
    color: $keyColor;
    font-size: 1.5rem;
  }
  &.h3-works {
    color: #fff;
    font-size: $baseFontSize;
  }
  &.h3-history {
    color: #fff;
    font-size: 1.25rem;
  }
  margin-bottom: .5rem;
}
.subtitle {
  color: rgba(#fff, .65);
  font-size: $baseFontSize;
  &:first-child {
    margin-bottom: .5rem;
  }
  &:last-child {
    margin-top: .5rem;
  }
}

// section
.section {
  padding: 4rem 0;

  &:nth-of-type(even) {
    background-color: $subColor;
  }

  &:first-of-type {
    padding-top: 0;
  }
}

// dl,dt,dd
dl {
  dt {
    padding: 1.5rem 1rem .5rem;
    color: #fff;
    font-weight: bold;
  }
  dd {
    padding: 0 1rem 1.5rem;
    border-bottom: solid 1px rgba(#fff, .6);
    letter-spacing: 0;
  }
}

/*--------------------------------------------------
*  utilities
*--------------------------------------------------*/

// text-align
.text-center {
  text-align: center;
}
.text-left {
  text-align: center;
}

// display
.d-flex {
  display: flex;
}

// font-family
.font-default {
  font-family: $baseFontFamily;
}
.font-alt {
  font-family: $altFontFamily;
  text-transform: uppercase;
}

// box-group base style
.box-group {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;

  .box-group-item {
    position: relative;
  }
}

/*--------------------------------------------------
*  Header
*--------------------------------------------------*/

.header {
  /*position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 10;*/
  padding: 2rem 0;

  .header-btn {
    margin-left: auto;

    display: block;
    width: 44px;
    height: 44px;
    padding: 10px;
    border: solid 2px $baseFontColor;
    border-radius: 4px;
    font-size: 20px;
    line-height: 0;

    color: $baseFontColor;
    transition: color .2s ease-out,
      background-color .2s ease-out;

    &:hover {
      background-color: #fff;
      color: $baseColor;
    }
  }
  .header-btn-back {
    display: block;
    width: 44px;
    height: 44px;
    font-size: 28px;
    line-height: 0;
    color: rgba(255,255,255,0.85);

    .label {
      font-size: .75rem;
      line-height: 1;
      margin-top: .3rem;
    }
  }
}

/*--------------------------------------------------
*  .intro
*--------------------------------------------------*/

.photo-intro {
  border-radius: 50%;
  margin: 2rem auto;
}

/*--------------------------------------------------
*  .skills
*--------------------------------------------------*/
// skills alt style
.box-group.box-group-skills {
  justify-content: center;
  margin: 0 -.5rem;

  .box-group-item {
    background-color: $baseColor;
    color: $baseFontColor;

    width: 100%;
    padding: 1.5rem;
    margin: 0 .5rem 1rem;
    border-radius: 4px;

    @include mq-up() {
      width: calc(33.3333% - 1rem);
    }
  }
}

.skill-icon {
  display: block;
  width: 5rem;
  height: 5rem;
  line-height: 5rem;
  margin: 0 auto .5rem;
  background-color: $keyColor;

  font-size: 2.5rem;
  color: #fff;
  border-radius: 50%;
}

/*--------------------------------------------------
*  .works
*--------------------------------------------------*/
.section.section-works {
  padding-bottom: 0;
}

// works alt style
.box-group.box-group-works {
  .box-group-item {
    width: 100%;
    overflow: hidden;

    @include mq-up() {
      width: 33.333333%;
    }
  }
  .box-group-image {
    display: block;
    transition: transform .2s ease-out;
    margin: 5% auto;
    width: 90%;
  }
  .box-group-inner {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 2;
  
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 1.5rem;

    color: #fff;
    background-color: rgba(0,0,0,.6);
  
    @include mq-up() {
      opacity: 0;
      transition: opacity .2s ease-out;
    
      &:hover {
        opacity: 1;
    
        & + .box-group-image {
          transform: scale(1.05);
        }
      }
    }
  }
  .btn-readmore {
    @extend .font-alt;
  
    text-align: center;
    padding: .25rem 1rem;
    margin-top: .5rem;
    border-radius: 4px;
  
    background-color: $keyColor;
    color: #fff;
    font-size: $baseFontSize;
  }
}

/*--------------------------------------------------
*  .history
*--------------------------------------------------*/
.section-history {
  background-image: linear-gradient(45deg, darken($subColor, 3%), darken($baseColor, 5%));
}

/*--------------------------------------------------
*  .contact
*--------------------------------------------------*/
.contacts {
  display: flex;
  justify-content: center;
}
.contact-icon {
  @extend .skill-icon;
  transition: background-color .2s ease-out;

  .contact-link:hover & {
    background-color: darken($keyColor, 10%);
  }
}

/*--------------------------------------------------
* Footer
*--------------------------------------------------*/

.footer {
  background-color: $subColor;
  padding: 1rem 0;
  color: #FFF;
}

